Fix z-index issues

--- a/src/components/TileModal/TileModal.css
+++ b/src/components/TileModal/TileModal.css
@@ -2,27 +2,31 @@
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  z-index: 10;
+  background-color: red;
+  z-index: 1;
   display: flex;
+  flex-direction: column;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 .backdrop {
   background-color: black;
   width: 100vw;
+  height: 100vh;
   position: absolute;
   /* height: 100vh; */
   min-height: 100%;
-  opacity: 0.95;
+  /* opacity: 0.95; */
 }
 
-.tile-modal-container {
+/* .tile-modal-container {
   position: relative;
-  width: 70%;
-  height: 95vh;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-template-rows: 5fr 1fr;
   align-items: center;
@@ -31,18 +35,20 @@
   border-radius: 0.5rem;
   background-color: var(--color-modal);
   overflow: hidden;
-}
+} */
 
 .tile {
-  text-align: center;
-  position: relative;
-  height: 70vh;
-  width: 80%;
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, .5);
+  /* text-align: center; */
+  /* position: relative; */
+  max-height: 80vh;
+  /* height: 70vh; */
+  /* width: 80%; */
+  /* box-shadow: 0 0 30px 0 rgba(0, 0, 0, .5); */
 }
 
 .tile img,
-.tile video {
+.tile video,
+.tile iframe {
   object-fit: contain;
   /* transition: all 0s; */
 }
